; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-imx/extr_mach-imx6q.c_mmd_write_reg.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-imx/extr_mach-imx6q.c_mmd_write_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.phy_device*, i32, i32, i32)* @mmd_write_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mmd_write_reg(%struct.phy_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.phy_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.phy_device* %0, %struct.phy_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.phy_device*, %struct.phy_device** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @phy_write(%struct.phy_device* %9, i32 13, i32 %10)
  %12 = load %struct.phy_device*, %struct.phy_device** %5, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @phy_write(%struct.phy_device* %12, i32 14, i32 %13)
  %15 = load %struct.phy_device*, %struct.phy_device** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = or i32 16384, %16
  %18 = call i32 @phy_write(%struct.phy_device* %15, i32 13, i32 %17)
  %19 = load %struct.phy_device*, %struct.phy_device** %5, align 8
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @phy_write(%struct.phy_device* %19, i32 14, i32 %20)
  ret void
}

declare dso_local i32 @phy_write(%struct.phy_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
